# Hyperagent

./: .gitignore  README.md  skills-lock.json
.github/workflows/: release.yml
hyperagent/: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
hyperagent/.github/workflows/: release.yml
hyperagent/core/: candle_cache.py  client.py  hypedexer_client.py  liquidation_aggregator.py  regime.py  risk.py  state.py
hyperagent/scanner/: liquidation_scanner.py  whale_addresses.py
hyperagent/src/hyperagent/: __main__.py  app.py  config.py
hyperagent/src/hyperagent/core/: client.py  hypedexer_client.py  liquidation_aggregator.py  regime.py  risk.py  state.py
hyperagent/src/hyperagent/onboarding/: __init__.py  logo.py  validators.py  wizard.py
hyperagent/src/hyperagent/scanner/: liquidation_scanner.py
hyperagent/src/hyperagent/strategies/: __init__.py  ai_wrapper.py  base.py  cascade.py  funding_sniper.py  liquidation_cascade_v2.py  momentum.py  orderbook_imbalance.py  pairs_reversion.py  trend_follower.py  volatility_breakout.py
hyperagent/src/hyperagent/tui/: param_schema.py  styles.tcss  tuning_advice.py
hyperagent/strategies/: __init__.py  ai_wrapper.py  base.py  cascade.py  funding_sniper.py  liquidation_cascade_v2.py  momentum.py  orderbook_imbalance.py  pairs_reversion.py  trend_follower.py  volatility_breakout.py
hyperagent/tui/: styles.tcss
hyperagent/tui/screens/: analytics.py  dashboard.py  edit_param_modal.py  reconcile_modal.py  strategy_config.py  trade_journal.py
hyperagent/tui/widgets/: cascade_gauge.py  heatmap.py  market_ticker.py  positions_panel.py
(+14 files in other folders)
